--- a/mainsite/static/jpt/css/_vars.scss
+++ b/mainsite/static/jpt/css/_vars.scss
@@ -33,8 +33,8 @@ $col-orange:            #ff8400;
 //$col-red:            #d92226;
 
 $font-main:             "proxima-nova",sans-serif;
-$font-titles:           "Rajdhani",sans-serif;
-$font-tiletitle:        "Rajdhani",sans-serif;
+$font-titles:           "rooney-sans",sans-serif;
+$font-tiletitle:        "rooney-sans",sans-serif;
 
 $font-thin:             100;
 $font-light:            300;
