--- a/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
+++ b/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
@@ -1,17 +1,23 @@
 {% load i18n tostring %}
-<div class="row padZero margZero">
+
+<div class="row padZero margZero techFocusRow">
+
 {% for article in articles %}
-        <article class="col-sm-12 tile-textbelow story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}">
-        <a href="{{ article.get_absolute_url }}">
-            <div class="story-wrap">
-                {% if article.picture and article.picture.url %}
-                    <figure class="thumb">
-{#                        <div class="img-wrap detailImgWrapFull"><img src="{{ article.picture.url }}" class="detailArticleImage"/></div>#}
-                        <div class="img-wrap detailImgWrapFull" style="background-image: url({{ article.picture.url }})"></div>
-                    </figure>
-                {% endif %}
-                <div class="story-text">
-                    <span class="pub-date">{{ article.date|date:"d F Y" }}
+    <article class="col-sm-12 tile-textbelow story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}">
+
+        <div class="story-wrap">
+
+            <div class="techauthbox">
+                <div class="auth-pic" style="background-image: url('{{ article.author_picture.url }}');"></div>
+                <div class="auth-name-title">
+                    <h2>{{ article.author_name }}</h2>
+                    <p>{{  article.author_title }}</p>
+                </div>
+            </div>
+
+            <div class="story-text">
+                <a href="{{ article.get_absolute_url }}">
+                    <span class="pub-date">{{ article.date|date:"d F Y" }} - MAIN
                         {% if pubcode == "OGF" and article.is_readable == True %}{# check if the article is locked or not and indicate #}
                             | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
                         {% endif %}
@@ -21,15 +27,14 @@
                     <p><span class="sponsored">SPONSORED</span></p>
                     {% endif %}
                     <p>{{ article.teaser }}</p>
-                </div>
+                </a>
             </div>
-        </a>
-        </article>
+
+        </div><!-- end story-wrap -->
+
+    </article>
 {% empty %}
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
-{% if show_all_url and show_all_text %}
-            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
-{% endif %}
 </div>
