--- a/spe_blog/templates/spe_blog/plugins/tech_focus_related.html
+++ b/spe_blog/templates/spe_blog/plugins/tech_focus_related.html
@@ -1,6 +1,7 @@
 {% load i18n cms_tags sekizai_tags %}
 
 <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}; {% if isbrief == True %}margin-left:10px;padding-left: 10px;{% endif %}">
+<p>Related</p>
 {#    <p>Back Color: {{ backcol }}</p>#}
 {#    <p>White Text: {{ whitetext }}</p>#}
 {#    <p>Publication: {{ pubcode }}</p>#}
