--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -439,5 +439,14 @@
                 </div>
                 <div class="clear"></div>
             </div>
-        </footer><!-- #spe-footer -->
+        </footer>
+
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+
+            $(".tile-bluebar img, .tile-blue img, .tile-lightblue img, .tile-white img, .tile-greenbar img, .tile-alert img, .tile-editorial img").addClass("img-responsive");
+
+        });
+    </script>
+    <!-- #spe-footer -->
 {% endblock content_footer %}
