--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -311,7 +311,7 @@ a:hover { text-decoration: none; }
 .link-box ul li a, .tile-links ul li a { color: #57575a; }
 .link-box ul li a:visited, .tile-links ul li a:visited { outline: 0; text-decoration: none; }
 
-.story .story-wrap .pub-date, .tile-textbelow .story-wrap .pub-date { color: red; display: block; text-transform: uppercase; font-size: 12px; font-weight: 700; letter-spacing: 1px; }
+.story .story-wrap .pub-date, .tile-textbelow .story-wrap .pub-date { color: #365d98; display: block; text-transform: uppercase; font-size: 12px; font-weight: 700; letter-spacing: 1px; padding-bottom: 10px; }
 .story .story-wrap h3, .tile-textbelow .story-wrap h3 { color: #0C090A; font-weight: 700; line-height: 1.1; margin-bottom: 8px; margin-top: 0; letter-spacing: -0.02em; }
 .story .story-wrap p, .tile-textbelow .story-wrap p { color: #3d4044; }
 
