--- a/spe_blog/templates/spe_blog/plugins/tech_focus_related.html
+++ b/spe_blog/templates/spe_blog/plugins/tech_focus_related.html
@@ -1,64 +1,25 @@
 {% load i18n cms_tags sekizai_tags %}
 
-<div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}; {% if isbrief == True %}margin-left:10px;padding-left: 10px;{% endif %}">
-<p>Related</p>
-{#    <p>Back Color: {{ backcol }}</p>#}
-{#    <p>White Text: {{ whitetext }}</p>#}
-{#    <p>Publication: {{ pubcode }}</p>#}
-    {% if pubcode == "TWA" %}
-        {% if isbrief == True %}
-            <div class="spacer10px"></div>
-        {% else %}
-            <div class="col-xs-12 sideListBoxTitle">
-                <span class="boxTitleText col-xs-12">What's Trending Now</span>
-            </div>
-        {% endif %}
-    {% endif %}
-{% for article in articles %}
-{#    <div class="row">#}
-        <div class="row sideListItem">
-        {% if pubcode == "TWA" %}
-            {% if isbrief %}
+<div class="tile-tech-related" xmlns="http://www.w3.org/1999/html">
+
+    {% for article in articles %}
+
+            <div class="row techListItem">
+
                 <div class="col-xs-12">
-            {% else %}
-                <span class="col-xs-1 sideListNum">{{ forloop.counter }}</span>
-                <div class="col-xs-11">
-            {% endif %}
+                    <span class="techListTitle"><a href={{ article.get_absolute_url}}>{{ article.title|truncatewords:10 }}</a></span><br>
 
-            <span class="sideListTitleTWA"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
-        {% else %}
-            <div class="col-xs-12">
-            <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title|truncatewords:10 }}</a></span><br>
-        {% endif %}
-
-            <span class="sideListDateTWA">{{ article.date|date:"d F Y" }}</span>
-        {% if pubcode == "TWA" %}
-{#            <span class="sideListAuthor">{{ article.author }}</span>#}
-        {% else %}
-            {% if article.is_readable == True %}
-                <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
-            {% endif %}
-        {% endif %}
+                    <span class="techListDate">{{ article.date|date:"d F Y" }}</span>
+                    {% if article.is_readable == True %}
+                        <span class="pipe">| </span><span class="sideListLock"><i class="fa fa-unlock"></i></span>
+                    {% else %}
+                        <span class="pipe">| </span><span class="sideListLock"><i class="fa fa-lock"></i></span>
+                    {% endif %}
+                </div>
             </div>
-        </div>
-{#    </div>#}
 
-{% empty %}
-    <p class="well">{% trans "No editorial available" %}</p>
-{% endfor %}
+    {% empty %}
+        <p class="well">{% trans "No related articles available" %}</p>
+    {% endfor %}
 
-    {% if show_all_url and show_all_text %}
-        <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
-    {% endif %}
-
-</div>
-
-{% addtoblock "js" %}
-    <script type="text/javascript" charset="utf-8">
-        $( document ).ready(function() {
-            $(function () {
-              $('[data-toggle="tooltip"]').tooltip()
-            })
-        });
-    </script>
-{%  endaddtoblock %}
+</div><!-- end tile-tech-related -->
