--- a/mainsite/templates/html5_bootstrap.html
+++ b/mainsite/templates/html5_bootstrap.html
@@ -4,7 +4,14 @@
 
     <script src="{% static 'js/jquery/jquery-1.12.0.min.js' %}"></script>
     <script src="{% static 'js/jquery/jquery-migrate-1.2.1.min.js' %}"></script>
-{#    <script src="{% static 'js/spectrum.js' %}"></script>#}
+
+    <script src="{% static 'cookiebar/jquery.cookiebar.js' %}"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'cookiebar/jquery.cookiebar.css' %}" />
+    <script type="text/javascript">
+      $(document).ready(function(){
+         $.cookieBar();
+      });
+    </script>
 
     <script type="text/javascript" async
       src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -13,13 +20,18 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
-{#    <!-- Optional theme -->#}
-{#    <!-- link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-theme.min.css' %}" -->#}
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 
 {% endblock plugs_apps %}
+
+{#{% addtoblock "js" %}#}
+{#    <script type="text/javascript" charset="utf-8">#}
+{#        $(function() {#}
+{#            $.cookieBar();#}
+{#        });#}
+{#    </script>#}
+{#{%  endaddtoblock %}#}
 
 {% block web_fonts %}
 {{ block.super }}
