added search to customer classifications on code and description; fixed the carousel component to honor the atag properly  YEAH!

--- a/carousel/templates/carousel/carousel_component_plugin.html
+++ b/carousel/templates/carousel/carousel_component_plugin.html
@@ -1,13 +1,9 @@
 {% load cms_tags %}
 
 <li>
-        {% for plugin in instance.child_plugin_instances %}
-            {% if component_href %}
-            <a href="{{ component_href }}">
-            {% endif %}
+    {% for plugin in instance.child_plugin_instances %}
+        <a href="{{ instance.component_href }}">
             {% render_plugin plugin %}
-            {% if component_href %}
-            </a>
-            {% endif %}
-        {% endfor %}
+        </a>
+    {% endfor %}
 </li>
