--- a/mainsite/static/css/unslider.scss
+++ b/mainsite/static/css/unslider.scss
@@ -9,7 +9,7 @@
 
 .#{$unslider-namespace}, %#{$unslider-namespace} {
   border: 1px solid hotpink;
-  height: 300px;
+  //height: 300px;
   overflow: hidden;
   margin-bottom: 15px;
 
