--- a/mainsite/static/cookiebar/jquery.cookiebar.css
+++ b/mainsite/static/cookiebar/jquery.cookiebar.css
@@ -3,6 +3,8 @@
 #cookie-bar.fixed.bottom {bottom:0; top:auto;}
 #cookie-bar p {margin:0; padding:0;}
 #cookie-bar a {color:#ffffff; display:inline-block; border-radius:3px; text-decoration:none; padding:0 6px; margin-left:8px;}
+#cookie-bar a.learnLink {color:#a3bce4;}
+#cookie-bar a.learnLink:hover {text-decoration:underline; color:lightgrey;}
 #cookie-bar .cb-enable {background:#007700;}
 #cookie-bar .cb-enable:hover {background:#009900;}
 #cookie-bar .cb-disable {background:#990000;}
