--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -138,11 +138,11 @@
   .story-wrap {
 
     .pub-date {
-      color:            $col-orange;
+      color:            $col-red;
       display:          block;
       text-transform:   uppercase;
       font-size:        12px;
-      font-weight:      700;
+      font-weight:      400;
       letter-spacing:   1px;
     }
     h3 {
