--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -34,9 +34,9 @@
         <!-- topbar -->
 {#        {% include 'include_topbar.html' %}#}
         <div class="row dontPrintMe" id="topbar">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6 topbarcol">
+                    <div class="col-sm-6 col-lg-4 col-lg-offset-1 topbarcol">
                         <ul class="topbarmenuleft">
                             <li><a href="http://www.spe.org/">SPE</a></li>
                             <li><a href="http://www.spe.org/jpt/">JPT</a></li>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="row dontPrintMe" id="menubar">
-            <div class="container-liquid">
+            <div class="container-fluid">
                 <div class="row logoRow">
                     <div class="col-xs-6 col-sm-3 col-md-2 col-lg-2 col-lg-offset-1" id="mainLogo">
                         <a href="/jpt/jpt-main-page/"><img src="{% static 'jpt/img/JPT_wText_Vertical.svg' %}" class="img-responsive"></a>
