--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav">
 
             <!-- Membership -->
-            <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Membership</a>
+            <li class="dropdown yamm-fw"><a href="http://www.spe.org/members/" data-toggle="dropdown" class="dropdown-toggle">Membership</a>
               <ul class="dropdown-menu">
                 <li>
                   <div class="yamm-content">
@@ -107,7 +107,7 @@
             </li>
 
             <!-- Events -->
-            <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Events</a>
+            <li class="dropdown yamm-fw"><a href="http://www.spe.org/events/about-events.php" data-toggle="dropdown" class="dropdown-toggle">Events</a>
               <ul class="dropdown-menu" style="/* display: block; */">
                 <li>
                   <div class="yamm-content">
@@ -151,7 +151,7 @@
             </li>
 
             <!-- Publications -->
-            <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Publications</a>
+            <li class="dropdown yamm-fw"><a href="http://www.spe.org/publications/" data-toggle="dropdown" class="dropdown-toggle">Publications</a>
               <ul class="dropdown-menu">
                 <li>
                   <div class="yamm-content">
@@ -232,7 +232,7 @@
             </li>
 
             <!-- Training -->
-            <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Training</a>
+            <li class="dropdown yamm-fw"><a href="http://www.spe.org/training/" data-toggle="dropdown" class="dropdown-toggle">Training</a>
               <ul class="dropdown-menu">
                 <li>
                   <div class="yamm-content">
@@ -287,7 +287,7 @@
             </li>
 
             <!-- Resources -->
-            <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Resources</a>
+            <li class="dropdown yamm-fw"><a href="http://www.spe.org/industry/" data-toggle="dropdown" class="dropdown-toggle">Resources</a>
               <ul class="dropdown-menu">
                 <li>
                   <div class="yamm-content">
@@ -444,7 +444,7 @@
     <script type="text/javascript" charset="utf-8">
         $( document ).ready(function() {
 
-            $(".tile-bluebar img, .tile-blue img, .tile-lightblue img, .tile-white img, .tile-greenbar img, .tile-alert img, .tile-editorial img").addClass("img-responsive");
+            $(".tile-bluebar img, .tile-blue img, .tile-lightblue img, .tile-white img, .tile-greenbar img, .tile-alert img, .tile-editorial img").addClass("img-responsive").css('display', 'initial');
 
         });
     </script>
