--- a/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
+++ b/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
@@ -12,7 +12,7 @@
                         <td valign="top" class="techauththumb">
                             <img src="{{ article.author_picture.url }}" class="img-responsive" />
                         </td>
-                        <td valign="top" class="techauthtext">
+                        <td valign="middle" class="techauthtext">
                             {% if article.author_name %}
                                 <h2>{{ article.author_name }}</h2>
                                 <p>{{  article.author_title }}</p>
