--- a/mainsite/static/css/unslider.css
+++ b/mainsite/static/css/unslider.css
@@ -12,5 +12,11 @@
 .unslider-arrow { position: absolute; left: 20px; cursor: pointer; }
 .unslider-arrow.next { left: auto; right: 20px; }
 
-.unslider { border: 1px solid hotpink; overflow: hidden; margin-bottom: 15px; }
+.unslider-nav { left: 0; right: 0; top: auto; margin: 0; }
+.unslider-nav ol { list-style: none; text-align: center; }
+.unslider-nav ol li { display: inline-block; float: none; width: 6px; height: 6px; margin: 0 4px; padding: 3px; background: transparent; border-radius: 5px; overflow: hidden; text-indent: -999em; border: 2px solid #26416c; cursor: pointer; opacity: .4; }
+.unslider-nav ol li.unslider-active { background: #26416c; cursor: default; opacity: 1; }
+
+.unslider { overflow: hidden; margin-bottom: 15px; box-shadow: 0 1px 2px #b4b4b9; background-color: white; }
 .unslider-arrow { top: 150px; z-index: 9999; }
+.unslider .tile, .unslider .tile-blue, .unslider .tile-lightblue, .unslider .tile-white, .unslider .tile-greenbar, .unslider .tile-alert, .unslider .tile-editorial { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
