--- a/mainsite/static/css/unslider/_dots.scss
+++ b/mainsite/static/css/unslider/_dots.scss
@@ -1,29 +1,71 @@
+//@if($unslider-dot-navigation){
+//	.#{$unslider-namespace}-nav, %#{$unslider-namespace}-nav {
+//		ol {
+//			list-style: none;
+//			text-align: center;
+//
+//			li {
+//				display: inline-block;
+//				width: 6px;
+//				height: 6px;
+//				margin: 0 4px;
+//
+//				background: transparent;
+//				border-radius: 5px;
+//
+//				overflow: hidden;
+//				text-indent: -999em;
+//
+//				border: 2px solid $unslider-dot-colour;
+//
+//				cursor: pointer;
+//
+//				&.unslider-active {
+//					background: $unslider-dot-colour;
+//					cursor: default;
+//				}
+//			}
+//		}
+//	}
+//}
+
+
+
 @if($unslider-dot-navigation){
-	.#{$unslider-namespace}-nav, %#{$unslider-namespace}-nav {
+	.#{$unslider-namespace}-nav {
+		//position: absolute;
+		//bottom: -35px;
+		left: 0;
+		right: 0;
+		top: auto;
+
+		margin: 0;
+
 		ol {
 			list-style: none;
 			text-align: center;
 
 			li {
 				display: inline-block;
+				float: none;
 				width: 6px;
 				height: 6px;
 				margin: 0 4px;
+				padding: 3px;
 
 				background: transparent;
 				border-radius: 5px;
-
 				overflow: hidden;
 				text-indent: -999em;
-
 				border: 2px solid $unslider-dot-colour;
-
 				cursor: pointer;
 
-				&.unslider-active {
-					background: $unslider-dot-colour;
-					cursor: default;
-				}
+				opacity: .4;
+			}
+			li.unslider-active {
+				background: $unslider-dot-colour;
+				cursor: default;
+				opacity: 1;
 			}
 		}
 	}
