--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -25,7 +25,7 @@
 }
 .tile-blue {
   background-color:     $col-speblue;
-  color:                $col-boxshadow;
+  color:                $col-white;
 
   a {
     color:              $col-textblue;
