--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -56,6 +56,7 @@ a:hover { text-decoration: none; }
 
 .navbar-default .navbar-nav > li > a { min-height: 53px; color: white; font-weight: 600; font-size: 18px; }
 .navbar-default .navbar-nav > li > a:hover { color: #26416c; background-color: #e7e7e7; }
+.navbar-default .navbar-nav > li > a:visited { color: white; }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover { color: #26416c; background-color: #e7e7e7; }
 
