--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -13,9 +13,9 @@
             </div>
         {% endif %}
     {% elif pubcode == "JPT" %}
-        {% if boxtitle != "" %}
+        {% if boxtitle != null %}
             <div class="col-xs-12 sideListBoxTitle">
-                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">{{ boxtitle }}</span>
+                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">{{ boxtitle }} </span>
             </div>
 {#        {% else %}#}
 {#            <div class="col-xs-12 sideListBoxTitle">#}
