--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -20,28 +20,28 @@
 {% block content_header %}
 <header id="spe-header">
     <div class="global-nav row"><!--  navbar-fixed-top -->
-            <nav id="global-nav" class="col-sm-6 col-sm-offset-1">
+            <nav id="global-nav" class="col-sm-12 col-sm-offset-0">
                 <ul>
                     <li><a href="https://www.spe.org/en/">Home</a></li>
                     <li><a href="http://www.spe.org/about/">About SPE</a></li>
                     <li><a href="http://www.spe.org/contact/">Contact Us</a></li>
-                    <li><a href="{{ login.url }}" id="global_login" class="loginLink"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ login.label }}</a></li>
+                    <li style="float: right;"><a href="{{ login.url }}" id="global_login" class="loginLink"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ login.label }}</a></li>
                 </ul>
             </nav>
-            <div id="translate-widget" class="col-sm-3">
-                <div id="google_translate_element"></div>
-                <script type="text/javascript">
-                        function googleTranslateElementInit() {
-                        new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'af,ar,az,bg,bn,bs,cs,da,de,el,en,es,fa,fr,hi,hr,hu,id,it,iw,ja,ka,ko,lt,lv,ms,nl,no,pl,pt,ro,ru,sk,sl,sr,sv,sw,th,tl,tr,uk,ur,vi,zh-CN', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true, gaId: 'UA-39288943-2'}, 'google_translate_element');
-                        }
-                </script>
-                <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-            </div>
+{#            <div id="translate-widget" class="col-sm-3">#}
+{#                <div id="google_translate_element"></div>#}
+{#                <script type="text/javascript">#}
+{#                        function googleTranslateElementInit() {#}
+{#                        new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'af,ar,az,bg,bn,bs,cs,da,de,el,en,es,fa,fr,hi,hr,hu,id,it,iw,ja,ka,ko,lt,lv,ms,nl,no,pl,pt,ro,ru,sk,sl,sr,sv,sw,th,tl,tr,uk,ur,vi,zh-CN', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true, gaId: 'UA-39288943-2'}, 'google_translate_element');#}
+{#                        }#}
+{#                </script>#}
+{#                <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>#}
+{#            </div>#}
     </div>
 
     <!-- YAMM navbar -->
     <div class="navbar yamm navbar-default row">
-      <div class="col-sm-10 col-sm-offset-1">
+      <div class="col-sm-12 col-sm-offset-0">
         <div class="navbar-header">
           <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 <!--                  <a href="#" class="navbar-brand">Yamm Megamenu</a>-->
@@ -369,23 +369,12 @@
 
     <!-- LOGO BAR -->
     <div id="branding" class="row">
-            <div class="col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-1 logo-wrap">
+            <div class="col-xs-8 col-xs-offset-1 col-sm-4 col-sm-offset-0 logo-wrap">
 {#                        <a href="/" class="spe-logo" title="SPE Homepage"><h1 id="logo">The Society of Petroleum Engineers</h1></a>#}
                 <img src="{% static 'www/img/spe_logo_full.png' %}" class="img-responsive">
             </div>
 
-            {% if login.authenticated == True %}
-                <div class="col-xs-10 col-xs-offset-0 col-sm-4 welcomemsg text-right">
-                    Welcome, {{visitor.greeting}}<br><br>
-                    <a class="update_profile" href="/ams/Custom/CustomerProfile.aspx">My profile</a>
-                </div>
-            {% else %}
-                <div class="col-xs-10 col-xs-offset-0 col-sm-4" style="height:10px;">
-
-                </div>
-            {% endif %}
-
-            <div class="col-xs-10 col-xs-offset-0 col-sm-3 col-md-3 search">
+            <div class="col-xs-10 col-xs-offset-0 col-sm-8 search">
                 <div id="search">
                     <div class="GoogleSiteSearch">
                         <div class="form-wrapper">
@@ -396,6 +385,16 @@
                         </div>
                     </div>
                 </div>
+                {% if login.authenticated == True %}
+                    <div class="welcomemsg text-right">
+                        Welcome, {{visitor.greeting}}<br>
+                        <a class="update_profile" href="/ams/Custom/CustomerProfile.aspx">My profile</a>
+                    </div>
+                {% else %}
+                    <div style="height:10px;">
+
+                    </div>
+                {% endif %}
             </div>
     </div>
 </header><!-- #spe-header -->
