Tile with image back fixed title
Made the title field not required, and if there’s no title, don’t
display it’s containing DIV

--- a/mainsite/templates/plugins/tile_img_back.html
+++ b/mainsite/templates/plugins/tile_img_back.html
@@ -2,7 +2,9 @@
     <a href="{{ link }}" target="_blank">
         <div class="tileImgBack" style="background-image: url('{{ image.url }}')">
             <div class="whiteFade">
-                <div class="boxtitles">{{ title }}</div>
+                {% if title != "" and title != null %}
+                    <div class="boxtitles">{{ title }}</div>
+                {% endif %}
                 <div class="tileDate">{{ date | date:"d F Y" }}</div>
                 <div class="tileText">{{ text | safe }}</div>
             </div>
