--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -6,7 +6,7 @@
 
     {% include 'include_scripts.html' %}
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
 
 {% endblock web_fonts %}
 
