--- a/mainsite/static/www/css/inline.scss
+++ b/mainsite/static/www/css/inline.scss
@@ -1,10 +1,10 @@
 @import 'vars';
 
 html, body, h1, h3, h2, h4, p {
-	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	//font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 .wwwInLineBox {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family:          $font-main;
   background-color:     $col-sprlghtgry;
   padding:              15px;
   margin:               20px 0;
@@ -13,8 +13,8 @@ html, body, h1, h3, h2, h4, p {
     padding:            0 0 15px 0;
     margin:             0 0 15px 0;
     border-bottom:      1px dotted $col-darkgrey;
-    font-size:          20px;
-    font-weight:        $font-bold;
+    //font-size:          20px;
+    //font-weight:        $font-bold;
   }
 }
 .ogfInLineBox {
@@ -26,7 +26,7 @@ html, body, h1, h3, h2, h4, p {
     padding:            0 0 15px 0;
     margin:             0 0 15px 0;
     border-bottom:      1px dotted $col-darkgrey;
-    font-size:          20px;
-    font-weight:        $font-bold;
+    //font-size:          20px;
+    //font-weight:        $font-bold;
   }
 }
