--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -428,3 +428,7 @@ a:hover { text-decoration: none; }
 .sideListTitle a:hover { color: #365d98; }
 
 .logo-wrap img { max-width: 335px; }
+
+h2 { font-size: 30px; font-weight: 700; }
+
+h3 { font-size: 20px; font-weight: 700; }
