--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -95,3 +95,11 @@ a {
   max-width: 335px;
 
 }
+h2 {
+  font-size:          30px;
+  font-weight:        $font-bold;
+}
+h3 {
+  font-size:          20px;
+  font-weight:        $font-bold;
+}
