--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -245,6 +245,7 @@
 
   .boxTitleText {
     //background-color:     $col-twablue;
+    font-family:          $font-titles;
     color:                white;
     padding:              10px;
     font-weight:          $font-bold;
