--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -376,7 +376,8 @@
         width:              100%;
         bottom:             0;
         left:               0;
-        padding-bottom:     30px;
+        //padding-bottom:     30px;
+        padding:            0 10px 30px 10px;
       }
     }
   }
@@ -507,4 +508,7 @@
   p {
     margin:             6px 0 0 0;
   }
+}
+.fullThumb {
+  margin-bottom:  15px;
 }
